--- a/src/Shipwreck.BlazorTypeahead.Demo/Index.razor
+++ b/src/Shipwreck.BlazorTypeahead.Demo/Index.razor
@@ -140,6 +140,7 @@
                class="form-control"
                type="text"
                autocomplete="off"
+               placeholder="States in USA"
                @bind="@query" />
     </div>
 </div>
